# NumLab

./: README.md  main.py  run.sh  run_linux.sh  run_windows.sh
app/: __init__.py  create_tables.py  databases.py  main.py  models.py
app/routes/: auth.py  dependencies.py  zeros.py
app/static/css/: cadastro.css  diferencasfinitas.css  home.css  index.css  login.css
app/static/js/: bisecao.js  cadastro.js  diferencasfinitas.js  edp_diferencas_finitas.js  edp_elementos_finitos.js  edp_metodos_espectrais.js  home.js  login.js  muller.js  newton.js  pvc_edos.js  pvi_edos.js  quadraturas_gauss.js  regra_trapezio.js  secante.js
app/templates/: cadastro.html  home.html  index.html  login.html
app/templates/autenticacao/: cadastro.html  login.html
app/templates/metodos/: muller.html  (+12 more)
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routers/: animations.py  root_finding.py
backend/app/api/schemas/: animations.py  root_finding.py
backend/app/media/Tex/: 06e8eb5505e162d3.tex  2c9176c7b7807dce.tex  3ee274fbcb68bbee.tex  65b6adc07ee60939.tex  6f2e2f8463274b1f.tex  9bece0c8a521ed34.tex  bef0c0877bf832a0.tex  e9924aaed6b5ad08.tex
backend/app/services/animations/: newton_anim.py  utils.py
backend/app/services/rootFinding/: bisection.py  muller.py  newton.py  secant.py
backend/media/videos/1080p60/partial_movie_files/NewtonScene/: partial_movie_file_list.txt
frontend/: .env.development  index.html  package-lock.json  package.json  setup_rf_arch.sh
frontend/src/: index.css  main.tsx
templates/: index.css  index.html
(+32 files in other folders)
