[project]
name = "numlab-backend"
version = "0.1.0"
description = "Backend API for NumLab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "sympy>=1.14.0",
    "mpmath>=1.3.0",
    "python-dotenv>=1.1.1",
    "click>=8.2.1",
    "starlette>=0.47.2",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = []
